test fix for image loading lag
this commit is broken in other ways, but i need to test this fix on vercel to see how it works

--- a/styles/ProjectsBlock.module.css
+++ b/styles/ProjectsBlock.module.css
@@ -56,6 +56,7 @@
   border-radius: 25px;
   background-color: #181818;
   cursor: pointer;
+  margin: 2rem;
   transition: transform 0.2s, opacity 0.15s;
 }
 
@@ -89,9 +90,14 @@
   display: flex;
   flex-direction: column;
   justify-content: center;
-  height: 100%;
+  /* height: 100%; */
   align-items: center;
   flex-wrap: wrap;
+}
+
+.project_row {
+  display: flex;
+  flex-direction: row;
 }
 
 .description {
@@ -102,4 +108,11 @@
   height: 50%;
   margin-bottom: 0.5rem;
   position: relative;
+}
+
+.hidden {
+  position: absolute;
+  left: -9999px;
+  top: 0;
+  overflow: hidden;
 }
